--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "anygridjs",
-  "version": "1.0.2",
-  "description": "Lightweight, framework agnostic, feature rich, paginated, sortable, searchable, data tables in plain js. Open-source &amp; MIT licensed.",
+  "version": "1.0.3",
+  "description": "Lightweight, framework agnostic, feature rich, paginated, sortable, searchable data tables in plain js. Open-source & MIT licensed.",
   "main": "anyGrid.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": ["data grid", "Javascript data tables", "javascript", "vanilla js"],
+  "author": "Gugulethu Nyoni",
+  "license": "MIT"
 }
